# Multi-Vehicle-Intersection-planning-with-MPC-approach-for-autonomous-vehicles

./: CMakeLists.txt  Dockerfile  INSTALL.md  README.md  client.cpp  client_controller
msgs/: custom_messages.proto
world/: interview_city.world
